src/tess/tl/test/fail/test_fail_const_value_param_reassign.tl
#module main

foo(x: Const[Int]) {
    x = 10
    x
}

main() {
    foo(42)
}
